# phytospatial

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  RELEASING.md  environment.yml  environments.yml  loaders.py  main.spec  mkdocs.yml  preprocessing.py  pyproject.toml  pytest.ini  release.sh  requirements.txt  spatial_tools.py  spectral_extraction.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: create_docs.yml  manual_test_release.yml  publish.yml  sync_readme.yml  test_suite.yml
assets/: louis.avif
docs/: acknowledgements.md  index.md  installation.md  license.md  usage.md
docs/assets/: forest.avif
docs/assets/images/: forest.avif
docs/assets/images/team/: grandmaison.avif  larouche.avif
docs/contributing/: code_of_conduct.md  releasing.md
docs/examples/: PIPELINE.py  REPROJECT.py  extraction_pipeline.ipynb  intro_pipeline.ipynb
docs/overrides/: main.html
docs/overrides/partials/: footer.html  header.html
docs/reference/: extract.md  geom.md  loaders.md  raster.md  raster_layer.md  vector.md
docs/reference/db/: cli.md  client.md  import_treetops.md  models.md  setup_db.md
docs/reference/lidar/: delineate_crown.md  detect_treetop.md  generate_model.md  layer.md  rasterize.md
docs/reference/raster/: compute_index.md  engine.md  geom.md  indices.md  io.md  layer.md  partition.md  resources.md  utils.md
docs/reference/vector/: geom.md  io.md  layer.md  spatial_operations.md
docs/stylesheets/: extra.css  global.css  home.css  theme.css
phytospatial/: loaders.py  preprocessing.py  spectral_extraction.py
scripts/: create_docs.sh  create_reference_docs.py  format_check.sh  publish_trigger.ps1  release.py  setup.sh  sync_readme.py  test_release.ps1  test_release.py  update_docs.py  version_bumper.ps1
scripts/auto/: update_docs.py
src/phytospatial/: __init__.py  __main__.py  extract.py  loaders.py  main.py  preprocessing.py  raster.py  raster_geometry.py  raster_layer.py  raster_processing.py  spatial_tools.py  spectral_extraction.py  vector.py
src/phytospatial/db/: __init__.py  bulk_loader.py  cli.py  client.py  import_treetops.py  models.py  setup_db.py
src/phytospatial/lidar/: __init__.py  csf.py  delineate_crown.py  detect_treetop.py  generate_model.py  io.py  layer.py  rasterize.py
src/phytospatial/raster/: __init__.py  compute_index.py  engine.py  geom.py  indices.py  io.py  layer.py  partition.py  resources.py  utils.py
src/phytospatial/vector/: __init__.py  geom.py  io.py  layer.py  spatial_metrics.py  spatial_operations.py
tests/: PIPELINE_TEST.py  __init__.py  conftest.py  helpers.py  test_basics  test_basics.py
tests/integration/: test_pipeline.py  test_raster_utils.py
tests/unit/: test_extract.py  test_loaders.py  test_raster.py  test_vector.py
