[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phytospatial"
version = "0.2.1"
authors = [
  { name="Louis-Vincent Grand'Maison", email="lvgra@ulaval.ca" },
]
description = "A python package to process remote sensing forestry data"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["forestry", "remote sensing", "imagery", "image processing", "geospatial", "vegetation"]

# CORE DEPENDENCIES: Necessary for the package to function
dependencies = [
    "geopandas", 
    "pandas",
    "tqdm",
    "rasterio>=1.4",
    "numpy>=1.24",
    "matplotlib>=3.5", 
    "shapely>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/Louis-Gm/phytospatial"
"Bug Tracker" = "https://github.com/Louis-Gm/phytospatial/issues"

# OPTIONAL DEPENDENCIES: Install with 'pip install .[analysis]'
[project.optional-dependencies]
analysis = [
    "pyarrow>=10.0",
    "scikit-learn",
    "scipy",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["phytospatial*"]
namespaces = false
