[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phytospatial"
version = "0.2.1-alpha"
authors = [
  { name="Louis-Vincent Grand'Maison", email="lvgra@ulaval.ca" },
]
description = "A python package to process remote sensing forestry data"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
license-files = ["LICENSE-MIT", "LICENSE-APACHE", "NOTICE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["forestry", "remote sensing", "imagery", "image processing", "geospatial", "GIS"]

# CORE DEPENDENCIES
dependencies = [
    "geopandas",
    "pandas",
    "tqdm",
    "rasterio>=1.4",
    "numpy>=1.24",
]

[project.urls]
"Homepage" = "https://github.com/Louis-Gm/phytospatial"
"Bug Tracker" = "https://github.com/Louis-Gm/phytospatial/issues"

# OPTIONAL DEPENDENCIES
[project.optional-dependencies]
analysis = [                    # pip install .[analysis]
    "pyarrow>=10.0",
    "scikit-learn",
    "scipy",
]

dev = [                         # pip install.[dev]
    "pytest",
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["phytospatial*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["LICENSE-MIT", "LICENSE-APACHE", "NOTICE"]