[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phytospatial"
version = "0.5.1"
authors = [
  { name="Louis-Vincent Grand'Maison", email="lvgra@ulaval.ca" },
]
description = "A python package that processes lidar and imagery data in forestry"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

keywords = ["forestry", "remote sensing", "imagery", "image processing", "geospatial", "GIS"]

# CORE DEPENDENCIES (Lidar, Vector, Raster)
dependencies = [
    "geopandas",
    "pyogrio",
    "polars",
    "pandas",
    "tqdm",
    "rasterio>=1.4",
    "numpy>=1.24",
    "psutil",
    "python-dotenv",
    "cloth-simulation-filter",
    "scipy",
    "laspy",
    "numba",
    "scikit-image",
    "numexpr",
    "shapely",
]

[project.urls]
"Homepage" = "https://github.com/Louis-Gm/phytospatial"
"Bug Tracker" = "https://github.com/Louis-Gm/phytospatial/issues"

# OPTIONAL DEPENDENCIES
[project.optional-dependencies]
db = [                          # pip install .[db]
    "sqlalchemy>=2.0",
    "geoalchemy2",
    "psycopg[binary]",
]

analysis = [                    # pip install .[analysis]
    "pyarrow>=10.0",
    "scikit-learn",
]

docs = [                        # pip install .[docs]
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-include-markdown-plugin>=4.0",
    "mkdocs-jupyter>=0.24",
]

dev = [                         # pip install .[dev]
    "pytest",
    "build",
    "twine",
    "pre-commit",
    "black",
    "memory_profiler",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["phytospatial*"]
namespaces = false

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.package-data]
"*" = ["LICENSE", "NOTICE"]